Closes #5